[package]
name = "wasm-rocket-jump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ['cdylib']

[profile.release]
lto = true
opt-level = 3

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "CanvasRenderingContext2d",
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "ImageData"
]